# OpenGLStudies

./: .gitignore  .gitmodules  CMakeLists.txt  build.bat  configure.bat  run.bat
src/: asset.hpp.in  main.cpp
